<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".views.settings.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >




        <!-- Company Name -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="Settings"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="28sp"
            android:background="#1E64FF"
            android:textAlignment="center"


            />

        <!-- Employee Button -->
        <Button
            android:id="@+id/logoutButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="500dp"
            android:backgroundTint="#F80202"
            android:drawablePadding="8dp"
            android:text="Logout"
            android:textColor="#F7F8FA" />




    </LinearLayout>
</ScrollView>