...
            android:backgroundTint="#3B64FF"
            android:clipToOutline="true"
            android:elevation="2dp"
            android:fontFamily="sans-serif-medium"
            android:outlineProvider="background"
            android:padding="12dp"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <!--redirect to login if user does not have account-->
        <LinearLayout
            android:layout_width="wrap_content"
...
