<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/black"
    android:gravity="center_vertical">

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Amount"
        android:textColor="@color/white"
        android:textColorHint="#9E9E9E"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/black"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
         />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#555555"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pay with PayPal"
        android:backgroundTint="#0066ff"
        android:textSize="18sp"
        android:padding="14dp" />

</LinearLayout>
