<resources>
    <string name="app_name">Quick_Cash</string>
    <string name="EMPTY_JOB_TITLE">Empty Job Title</string>
    <string name="EMPTY_DEADLINE">Empty Application Deadline</string>
    <string name="EMPTY_STRING"></string>
    <string name="INVALID_JOB_CATEGORY">Invalid job category</string>
    <string name="INVALID_APPLICATION_DEADLINE">Invalid application deadline</string>
    <string name="EMPTY_DESCRIPTION">Empty description</string>
    <string name="EMPTY_LOCATION">Job location is required</string>
    <string name="INVALID_LOCATION">Unable to find location. Please enter a valid address.</string>
    <string name="FIREBASE_DB_URL">https://csci3130-fall2025-a2-default-rtdb.firebaseio.com</string>
    <string name="register">Register</string>
    <string name="banner_id">Banner ID</string>
    <string name="email">Email</string>
    <string name="account_registration">Account Registration</string>
    <string name="retrieve_credentials">Retrieve Credentials</string>
    <string name="INVALID_EMAIL">Enter enter a Valid Email</string>
    <string name="INVALID_PASSWORD">"Password must include an uppercase letter, number, and special character, atleast 8 characters long"</string>
    <string name="EMPTY_PASSWORD">Enter a Valid Password</string>
    <string name="INVALID_NAME">Enter enter a Valid Name</string>
    <string name="INVALID_USER_TYPE">Enter select a User Type</string>
    <string name="REGISTRATION_SUCCESSFUL">Registration Successful</string>
    <string name="REGISTRATION_FAILED">Registration Failed</string>
    <string name="RESET_SEND_SUCCESSFUL">Password Successfully Reset</string>
    <string name="RESET_SEND_FAILED">Failed to Reset Password</string>
    <string name="EMAIL_NOT_EXIST">Email does not exist for any user</string>
    <string name="NO_RESULT">No Results. Try a different search</string>
    <string name="RESULT">Results</string>
    <string name="title_activity_current_location">CurrentLocation</string>
    <string name="ALREADY_APPLIED">Already Applied</string>
    <string name="APPLICATION_SUCCESS">Application Submitted</string>
    <string name="APPLICATION_FAILURE">Cover letter empty</string>
    <string-array name="statuses">
        <item>Pending</item>
        <item>Accepted</item>
        <item>Declined</item>
        <item>Completed</item>
        <item>Paid</item>
    </string-array>
    <string name="MARKED_COMPLETED">Marked as completed</string>
</resources>